[gd_scene load_steps=8 format=3 uid="uid://dpy0bookke6to"]

[ext_resource type="Texture2D" uid="uid://bq1fb8i7vtves" path="res://assets/resu_menu.png" id="1_53bw1"]
[ext_resource type="Script" path="res://scenes/ui_scene/scene_save/save_item.gd" id="1_e48fi"]
[ext_resource type="FontFile" uid="uid://mnflroidndvn" path="res://assets/fonts/fusion-pixel-10px-monospaced.otc" id="1_gyh12"]
[ext_resource type="StyleBox" uid="uid://c1tq8xpqkwuuf" path="res://scenes/ui_scene/scene_save/style_box_flat.tres" id="2_oo2ue"]

[sub_resource type="LabelSettings" id="LabelSettings_onij7"]
font = ExtResource("1_gyh12")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_ktbyy"]
font = ExtResource("1_gyh12")
font_size = 12
font_color = Color(1, 1, 1, 0.784314)
outline_size = 5
outline_color = Color(0.156781, 0.0824791, 0.0485759, 1)
shadow_color = Color(0, 0, 0, 0.827451)

[sub_resource type="LabelSettings" id="LabelSettings_n8gk5"]
font = ExtResource("1_gyh12")

[node name="SceneItem" type="Control"]
custom_minimum_size = Vector2(141, 278)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -659.0
offset_bottom = -322.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e48fi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(141, 248)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_oo2ue")

[node name="ColorRect" type="TextureRect" parent="VBoxContainer/PanelContainer"]
visible = false
clip_contents = true
layout_mode = 2
texture = ExtResource("1_53bw1")
expand_mode = 1

[node name="EmptyLabel" type="Label" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
text = "NO DATA"
label_settings = SubResource("LabelSettings_onij7")
horizontal_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/Control"]
layout_mode = 1
offset_right = 125.0
offset_bottom = 232.0
alignment = 2

[node name="MapName" type="Label" parent="VBoxContainer/PanelContainer/Control/VBoxContainer"]
layout_mode = 2
text = "蔷薇馆·中厅"
label_settings = SubResource("LabelSettings_ktbyy")
horizontal_alignment = 2
vertical_alignment = 1

[node name="GameTime" type="Label" parent="VBoxContainer/PanelContainer/Control/VBoxContainer"]
layout_mode = 2
text = "10m24s"
label_settings = SubResource("LabelSettings_ktbyy")
horizontal_alignment = 2
vertical_alignment = 1

[node name="SaveTime" type="Label" parent="VBoxContainer/PanelContainer/Control/VBoxContainer"]
layout_mode = 2
text = "2025-06-15 11:11:11"
label_settings = SubResource("LabelSettings_ktbyy")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "存档"
label_settings = SubResource("LabelSettings_n8gk5")
horizontal_alignment = 1
